--- a/QuanLyNhaSach/QuanLyNhaSach/Forms/Dashboard_Admin.resx
+++ b/QuanLyNhaSach/QuanLyNhaSach/Forms/Dashboard_Admin.resx
@@ -85,7 +85,7 @@
         naon9x/JPn369OnTpxsGBv4HQtbXoml2GScAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="BtPhieuNhap.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnPhieuNhap.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAsZJREFUaEPt
         mstqFEEUhpsYUVHBhdn4BlEfQU0MSETcGIg+gjcIKj6FK7eioAsF38OdSy8kKl5QBF3oQgRR1PE/1V/b
@@ -101,18 +101,6 @@
         JcP+O2MOu10UZEa6bqmgGOP3S9uRPZ0Gx/j3/Hwm7eN07aMwq1KVseeVtCLtkR5aQXRuM/YkspD3JQts
         9843yd6JO9IZaRvt1t/dzQyLwk8300kUfk56ZDsR5ymniTZgmzmXZVn2B1A7ESGhdwZUAAAAAElFTkSu
         QmCC
-</value>
-  </data>
-  <data name="button2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAADIAAAAyCAYAAAAeP4ixAAAABGdBTUEAALGPC/xhBQAAAXJJREFUaEPt
-        mjFKBEEQRQcUFoSVDTbzBnoCwRPooh7E0BMYeR9PYCYiukYii6KLGpqYCAbl767vJCazQ830FNSDzzLV
-        Wz3/IZhoFXhDREbIKTJHPpGisNZqYG8Luc03DARWaw520k/iPm+LPCLHyJTHvZNbAD42BzsnuioPyITj
-        YmiVdiLXuipHHBWFXVqJfOmqjDkqCru0EsnwsTisYyuC8QHylL9gT7p3n6+q0SN7kaWedsYLX1XDublI
-        ho+m8Op/d3McIiHSFl7dm8i7nnbGkq+q4dxcZIZ0JfOG9PPrtwSsEyIhYg3rhEiIWMM6IRIi1rBOiISI
-        NawTIiFiDeuESIhYwzohkpgiZ4jPP71xL/HBz0HAes3h3h+XyB6yxmM/5PrKBbLOsT/UIbPNkU8g8KMe
-        MuLIJxBYqIfscuQTCJyrh1whGxz7A+UnyGsyAXfIIbLJY1+g+A7yjAwGVlsd7I6R9E81N8g3UhTWCgZO
-        Vf0CNDTIiMLW82wAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="btnKhoSach.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
